@@ -110,6 +110,8 @@ Here's a list of the inputs and options which can be specifed in the config file
         NOSIG: don't show signal in stack
         OVERSIG: overlay signal (not normalised)
       SystControlPlots -> if set to true, plots will be dumped showing the shape effect of a given systematic (before and after smoothing/symmetrisation)
+      SystDataPlots    -> if set to true, plots will be dumped showing the shape effect of a given systematic (before and after smoothing/symmetrisation) on top of the nominal sum of samples.
+      		          Data are then plotted in the ratio. If the option is set to "fillUpFrame" data will also be plotted in the upper frame.
       CorrelationThreshold -> Threshold used to draw the correaltion matrix (only systematics with at least one correlation larger than than draw) (0.05->5%)
       SignalRegionsPlot-> list of regions to put in SignalRegionsPlot; use "EMPTY" to put an empty entry, "ENDL" to specify end of line
       HistoChecks      -> NOCRASH: means that if an error is found in the input histograms, the code continues (with only warnings) -- default leads to a crash in case of problem
